Fixed carat alignment when completed reps are hidden

--- a/src/expac.css
+++ b/src/expac.css
@@ -42,6 +42,14 @@
     margin: 6px 0;
 }
 
+.expacName>div {
+    justify-content: space-between;
+}
+
+.carat {
+    align-self: center;
+}
+
 .expacName h2 {
     width: 100%;
 }
